2025-05-17T12:24:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15085156868 # 982
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-17
* notice: last 14d: unq all: 33 68
* notice: prev accum: outdated-unq outdated-all / unq all: 2569 4867 / 2621 4935
* notice: next accum: outdated-unq outdated-all / unq all: 2569 4867 / 2622 4936
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-17]

2025-05-17T01:07:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15080063891 # 981
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-17
* notice: last 14d: unq all: 33 67
* notice: prev accum: outdated-unq outdated-all / unq all: 2567 4865 / 2621 4935
* notice: next accum: outdated-unq outdated-all / unq all: 2569 4867 / 2621 4935
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +3 +3 -1 -1 / 2 2
* notice: removed / changed dates: [2025-05-02] / [2025-05-03]

2025-05-16T12:28:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15068443579 # 980
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-05-16
* notice: last 14d: unq all: 34 69
* notice: prev accum: outdated-unq outdated-all / unq all: 2567 4865 / 2620 4934
* notice: next accum: outdated-unq outdated-all / unq all: 2567 4865 / 2621 4935
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-05-02 2025-05-16]

2025-05-16T01:09:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/15058380090 # 979