@@ -1,28 +1,10 @@
 {
-  "timestamp" : "2025-05-17T12:24:57Z",
-  "count_outdated" : 4867,
-  "uniques_outdated" : 2569,
-  "count" : 4936,
+  "timestamp" : "2025-05-18T01:13:28Z",
+  "count_outdated" : 4871,
+  "uniques_outdated" : 2573,
+  "count" : 4937,
   "uniques" : 2622,
   "clones" : [
-    {
-      "timestamp": "2025-05-03T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 1, 3 ]
-    },
-    {
-      "timestamp": "2025-05-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-05-05T00:00:00Z",
       "count": 8,
@@ -133,9 +115,9 @@
     },
     {
       "timestamp": "2025-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
