@@ -1,17 +1,7 @@
 {
-  "count": 68,
-  "uniques": 33,
+  "count": 66,
+  "uniques": 31,
   "clones": [
-    {
-      "timestamp": "2025-05-03T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
-    {
-      "timestamp": "2025-05-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-05-05T00:00:00Z",
       "count": 8,
@@ -74,7 +64,7 @@
     },
     {
       "timestamp": "2025-05-17T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
